Googleアナリティクス設定

--- a/AppDesign/appdesign.html
+++ b/AppDesign/appdesign.html
@@ -7,6 +7,15 @@
   <title>PORTFOLIO/AppDesign</title>
   <link rel="stylesheet" type="text/css" href="../index.css">
   <link rel="stylesheet" type="text/css" href="./appdesign.css">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92255928-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-92255928-2');
+  </script>
 </head>
 
 <body id="top">
