--- a/Gallery/Calli_Printed/printed.html
+++ b/Gallery/Calli_Printed/printed.html
@@ -8,6 +8,15 @@
   <link rel="stylesheet" type="text/css" href="../../index.css">
   <link rel="stylesheet" type="text/css" href="../calli.css">
   <script src="../JavaScript/jquery-3.1.0.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92255928-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-92255928-2');
+  </script>
 </head>
 
 <body id="top">
