SNSの設定変更

--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -13,7 +13,6 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'UA-92255928-2');
   </script>
 </head>
@@ -30,17 +29,20 @@
         <li class="appdesign"><a href="../AppDesign/appdesign.html">AppDesign</a></li>
       </ul>
     </nav>
-      <ul class="socialBtn">
-        <li>
-          <a href="https://twitter.com/Kenta960131" target="_blank"><img src="../Main_Photo/twitter.png" alt="Twitter"></a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/kentahan0131/" target="_blank"><img src="../Main_Photo/instagram.png" alt="Instagram"></a>
-        </li>
-        <li class="last">
-          <a href="https://www.facebook.com/kenta.han.9" target="_blank"><img src="../Main_Photo/facebook.png" alt="Facebook"></a>
-        </li>
-      </ul>
+    <ul class="socialBtn">
+      <li>
+        <a href="https://qiita.com/Kenta-Han" target="_blank"><img src="../Main_Photo/qiita.png" alt="Qiita"></a>
+      </li>
+      <li>
+        <a href="https://twitter.com/KentaH_1996" target="_blank"><img src="../Main_Photo/twitter2.jpg" alt="Twitter"></a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/kentahan0131/" target="_blank"><img src="../Main_Photo/instagram2.png" alt="Instagram"></a>
+      </li>
+      <li class="last">
+        <a href="https://www.facebook.com/kenta.han.9" target="_blank"><img src="../Main_Photo/facebook2.png" alt="Facebook"></a>
+      </li>
+    </ul>
   </header>
 
   <!-- main -->
@@ -111,10 +113,9 @@
         <br>
         <h2>写真(製作中)</h2>
         <div class="pc">
-          <h3><a href="hakone.html">箱根(神奈川県)</a></h3>
-          <h3><a href="takatiho.html">高千穂(宮崎県)</a></h3>
-          <h3><a href="kanazawa.html">金沢(石川県)</a></h3>
-          <h3><a href="kypoto.html">京都</a></h3>
+          <h3><a href="hakone.html">箱根(神奈川県)</a>&nbsp;&nbsp;&nbsp;<a href="takatiho.html">高千穂(宮崎県)</a>&nbsp;&nbsp;&nbsp;<a href="kanazawa.html">金沢(石川県)</a></h3>
+          <!-- <h3><a href="kypoto.html">京都</a></h3> -->
+          <h4>※サイトの写真が重いため注意してください</h4>
         </div>
       </div>
     </section>
