--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
     </nav>
     <ul class="socialBtn">
       <li>
-        <a href="https://twitter.com/Kenta960131" target="_blank"><img src="./Main_Photo/twitter.png" alt="Twitter"></a>
+        <a href="https://qiita.com/Kenta-Han" target="_blank"><img src="./Main_Photo/qiita.png" alt="Qiita"></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/kentahan0131/" target="_blank"><img src="./Main_Photo/instagram.png" alt="Instagram"></a>
+        <a href="https://twitter.com/KentaH_1996" target="_blank"><img src="./Main_Photo/twitter2.jpg" alt="Twitter"></a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/kentahan0131/" target="_blank"><img src="./Main_Photo/instagram2.png" alt="Instagram"></a>
       </li>
       <li class="last">
-        <a href="https://www.facebook.com/kenta.han.9" target="_blank"><img src="./Main_Photo/facebook.png" alt="Facebook"></a>
+        <a href="https://www.facebook.com/kenta.han.9" target="_blank"><img src="./Main_Photo/facebook2.png" alt="Facebook"></a>
       </li>
     </ul>
   </header>
