--- a/About/about.html
+++ b/About/about.html
@@ -30,17 +30,20 @@
         <li class="appdesign"><a href="../AppDesign/appdesign.html">AppDesign</a></li>
       </ul>
     </nav>
-      <ul class="socialBtn">
-        <li>
-          <a href="https://twitter.com/Kenta960131" target="_blank"><img src="../Main_Photo/twitter.png" alt="Twitter"></a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/kentahan0131/" target="_blank"><img src="../Main_Photo/instagram.png" alt="Instagram"></a>
-        </li>
-        <li class="last">
-          <a href="https://www.facebook.com/kenta.han.9" target="_blank"><img src="../Main_Photo/facebook.png" alt="Facebook"></a>
-        </li>
-      </ul>
+    <ul class="socialBtn">
+      <li>
+        <a href="https://qiita.com/Kenta-Han" target="_blank"><img src="../Main_Photo/qiita.png" alt="Qiita"></a>
+      </li>
+      <li>
+        <a href="https://twitter.com/KentaH_1996" target="_blank"><img src="../Main_Photo/twitter2.jpg" alt="Twitter"></a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/kentahan0131/" target="_blank"><img src="../Main_Photo/instagram2.png" alt="Instagram"></a>
+      </li>
+      <li class="last">
+        <a href="https://www.facebook.com/kenta.han.9" target="_blank"><img src="../Main_Photo/facebook2.png" alt="Facebook"></a>
+      </li>
+    </ul>
   </header>
 
   <!-- main -->
