--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="https://twitter.com/KentaH_1996" target="_blank"><img src="./Main_Photo/twitter2.jpg" alt="Twitter"></a>
       </li>
       <li>
-        <a href="https://www.instagram.com/kentahan0131/" target="_blank"><img src="./Main_Photo/instagram2.png" alt="Instagram"></a>
+        <a href="https://www.instagram.com/kenta.han_0131/" target="_blank"><img src="./Main_Photo/instagram2.png" alt="Instagram"></a>
       </li>
       <li class="last">
         <a href="https://www.facebook.com/kenta.han.9" target="_blank"><img src="./Main_Photo/facebook2.png" alt="Facebook"></a>
@@ -60,18 +60,24 @@
     <!-- study -->
     <section id="study" class="cf" style="margin:5% 0;">
       <h2 class="ttl"><a href="./Study/study.html">Study</a></h2>
-      <h2 style="text-align:center;"><a href="./Study/study.html">ユーザのレビュー選択に基づく観光スポット検索手法，潘 健太，北山 大輔</a></h2>
-      <p style="text-align:center;">第10回データ工学と情報マネジメントに関するフォーラム(DEIM Forum 2018), H1-2, 福井県, 2018年3月, 査読無</p>
-      <h2 style="text-align:center;"><a href="./Study/study.html">観光スポット検索のためのユーザのレビュー選択と特徴抽出に関する考察，潘 健太，北山 大輔</a></h2>
+      <h2 style="text-align:center;"><a href="./Study/study.html">ユーザのレビュー選択に基づく観光スポット検索手法, 潘 健太, 北山 大輔</a></h2>
+      <p style="text-align:center;">第10回データ工学と情報マネジメントに関するフォーラム(DEIM Forum 2018), H1-2, 福井県，2018年3月, 査読無</p>
+      <h2 style="text-align:center;"><a href="./Study/study.html">観光スポット検索のためのユーザのレビュー選択と特徴抽出に関する考察, 潘 健太, 北山 大輔</a></h2>
       <p style="text-align:center;">電子情報通信学会技術研究報告, Vol.118, No.107, pp.21-24, 東京都, 2018年6月, 査読無</p>
-      <h2 style="text-align:center;"><a href="./Study/study.html">ユーザの既訪問スポットの位置付けに基づく未訪問スポットの説明手法，潘 健太，北山 大輔</a></h2>
-      <p style="text-align:center;">第11回データ工学と情報マネジメントに関するフォーラム(DEIM Forum 2019), 長崎県, 2019年3月, 査読無</p>
-      <h2 style="text-align:center;"><a href="./Study/study.html">An Explanation Method of Unfamiliar Tourist Spots based on Roles of User's Familiar Spots，Kenta.Han, Daisuke.Kitayama</a></h2>
-      <p style="text-align:center;">International MultiConference of Engineers and Computer Scientists 2019(IMECS2019),IAENG International Conference on Internet Computing and Web Services (ICICWS'19), Hong Kong, 13-15 March, 2019, 査読有</p>
+      <h2 style="text-align:center;"><a href="./Study/study.html">ユーザの既訪問スポットの位置付けに基づく未訪問スポットの説明手法, 潘 健太, 北山 大輔</a></h2>
+      <p style="text-align:center; color:#ff0000;">第11回データ工学と情報マネジメントに関するフォーラム(DEIM Forum 2019), H7-2, 長崎県, 2019年3月, 査読無</p>
+      <h2 style="text-align:center;"><a href="./Study/study.html">An Explanation Method of Unfamiliar Tourist Spots based on Roles of User's Familiar Spots, Kenta.Han, Daisuke.Kitayama</a></h2>
+      <p style="text-align:center; color:#ff0000;">International MultiConference of Engineers and Computer Scientists 2019(IMECS2019), IAENG International Conference on Internet Computing and Web Services (ICICWS'19), Hong Kong, 13-15 March 2019, 査読有</p>
       <ul class="studyList">
+        <h2 style="text-align:center;">------ Figure ------</h2>
         <img src="./Main_Photo/Study/study_1.png" style="width:20%; margin:0 2% 0 20%;">
         <img src="./Main_Photo/Study/study_2.png" style="width:35%; margin:0 2% 0 10%;">
-        <img src="./Main_Photo/Study/study_3.png" style="width:80%; margin:0 2% 0 10%;">
+        <!-- <img src="./Main_Photo/Study/study_3.png" style="width:80%; margin:0 2% 0 10%;"> -->
+      </ul>
+      <ul class="studyList">
+        <h2 style="text-align:center;">------ Poster ------</h2>
+        <img src="./Main_Photo/Study/DEIM2018_poster.png" style="width:45%; margin:0 2% 0 3%;">
+        <img src="./Main_Photo/Study/DEIM2019_poster.png" style="width:45%; margin:0 2% 0 2%;">
       </ul>
     </section>
 
