--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -36,9 +36,9 @@
       <li>
         <a href="https://twitter.com/KentaH_1996" target="_blank"><img src="../Main_Photo/twitter2.jpg" alt="Twitter"></a>
       </li>
-      <li>
-        <a href="https://www.instagram.com/kentahan0131/" target="_blank"><img src="../Main_Photo/instagram2.png" alt="Instagram"></a>
-      </li>
+      <!-- <li>
+        <a href="https://www.instagram.com/kenta.han_0131/" target="_blank"><img src="../Main_Photo/instagram2.png" alt="Instagram"></a>
+      </li> -->
       <li class="last">
         <a href="https://www.facebook.com/kenta.han.9" target="_blank"><img src="../Main_Photo/facebook2.png" alt="Facebook"></a>
       </li>
