基本情報の修正

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
       <h2 style="text-align:center;"><a href="./Study/study.html">観光スポット検索のためのユーザのレビュー選択と特徴抽出に関する考察, 潘 健太, 北山 大輔</a></h2>
       <p style="text-align:center;">電子情報通信学会技術研究報告, Vol.118, No.107, pp.21-24, 東京都, 2018年6月, 査読無</p>
       <h2 style="text-align:center;"><a href="./Study/study.html">ユーザの既訪問スポットの位置付けに基づく未訪問スポットの説明手法, 潘 健太, 北山 大輔</a></h2>
-      <p style="text-align:center; color:#ff0000;">第11回データ工学と情報マネジメントに関するフォーラム(DEIM Forum 2019), H7-2, 長崎県, 2019年3月, 査読無</p>
-      <h2 style="text-align:center;"><a href="./Study/study.html">An Explanation Method of Unfamiliar Tourist Spots based on Roles of User's Familiar Spots, Kenta.Han, Daisuke.Kitayama</a></h2>
-      <p style="text-align:center; color:#ff0000;">International MultiConference of Engineers and Computer Scientists 2019(IMECS2019), IAENG International Conference on Internet Computing and Web Services (ICICWS'19), Hong Kong, 13-15 March 2019, 査読有</p>
+      <p style="text-align:center;">第11回データ工学と情報マネジメントに関するフォーラム(DEIM Forum 2019), H7-2, 長崎県, 2019年3月, 査読無</p>
+      <h2 style="text-align:center;"><a href="./Study/study.html">An Explanation Method of Unfamiliar Tourist Spots based on Roles of User's Familiar Spots, Kenta Han, Daisuke Kitayama</a></h2>
+      <p style="text-align:center;">International MultiConference of Engineers and Computer Scientists 2019(IMECS2019), IAENG International Conference on Internet Computing and Web Services (ICICWS'19), Hong Kong, 13-15 March 2019, 査読有<br><span style="font-weight:700;color:blue;">Best Student Paper Award　受賞</span></p>
       <ul class="studyList">
         <h2 style="text-align:center;">------ Figure ------</h2>
         <img src="./Main_Photo/Study/study_1.png" style="width:20%; margin:0 2% 0 20%;">
