--- a/About/about.html
+++ b/About/about.html
@@ -51,12 +51,12 @@
     <!-- about -->
     <section class="contBox cf">
       <h2 class="ttl large">About</h2>
-      <p class="txtBox">中国天津市出身．<br>13歳の時，日本の長野県飯田市に来ました．日本語独力で学び，高校受験で上京しました．<br>現在は工学院大学の情報学専攻の修士1年生です．<br>2017年から2018年の1年間でインターンシップにてWebサービス制作を担当しています．<br>2018年から大学内でTA(ティーチャーアシスト)を担当しています．</p>
+      <p class="txtBox">中国天津市出身．<br>13歳の時，日本の長野県飯田市に来ました．独学で日本語を学び，高校受験で上京しました．<br>現在は工学院大学大学院工学研究科情報学専攻修士2年生です．<br>2017年8月から2018年2月の半年間でインターンシップにてWebサービス制作を担当していました．<br>2018年から大学内でTA(ティーチャーアシスト)を担当しています．</p>
       <div class="about_main">
         <div class="left"><img src="../Main_Photo/Top/photo_02.png" alt=""></div>
         <div class="right">
           <ul>
-            <li>工学院大学工学研究科情報学専攻</li>
+            <li>工学院大学大学院　工学研究科　情報学専攻</li>
             <li>研究室 ：インタラクティブメディア研究室</li>
             <li>所在地 ：東京都新宿区</li>
             <li>お問い合わせ ：em18011@ns.kogakuin.ac.jp</li>
@@ -65,7 +65,7 @@
             <h2>潘 健太　Han Kenta</h2>
 
             <li>Facebook ：<a href="https://www.facebook.com/kenta.han.9">kenta.han.9</a></li>
-            <li>Instagram ：<a href="https://www.instagram.com/kentahan0131/?hl=ja">kentahan0131</a></li>
+            <li>Instagram ：<a href="https://www.instagram.com/kenta.han_0131/?hl=ja">kenta.han_0131</a></li>
             <li>Linkedln ：<a href="https://www.linkedin.com/in/%E5%81%A5%E5%A4%AA-kenta-%E6%BD%98-han-8b6b5a146/">Kenta Han</a></li>
           </ul>
         </div>
