--- a/Study/study.html
+++ b/Study/study.html
@@ -66,8 +66,8 @@
           <h2>観光スポット検索のためのユーザのレビュー選択と特徴抽出に関する考察</h2><p>潘 健太，北山 大輔<br><a href="https://www.ieice.org/ken/index/ieice-techrep-118-107.html">電子情報通信学会技術研究報告<br> Vol.118, No.107, pp.21-24, 東京都, 2018年6月, 査読無</a></p>
           <h3><a href="http://db-event.jpn.org/soc2018/">SoC2018へ</a></h3>
           <iframe src="SoC2018_Hankenta.pdf" width="100%" height="700px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
-          <h2>An Explanation Method of Unfamiliar Tourist Spots based on Roles of User's Familiar Spots</h2><p>Kenta.Han, Daisuke.Kitayama<br>International MultiConference of Engineers and Computer Scientists 2019(IMECS2019)<br> IAENG International Conference on Internet Computing and Web Services (ICICWS'19), Hong Kong, 13-15 March, 2019, 査読有</p>
-          <h3><a href="http://www.iaeng.org/IMECS2019/index_main.html">IMECS2019へ</a></h3>
+          <h2>An Explanation Method of Unfamiliar Tourist Spots based on Roles of User's Familiar Spots</h2><p>Kenta Han, Daisuke Kitayama<br>International MultiConference of Engineers and Computer Scientists 2019(IMECS2019)<br> IAENG International Conference on Internet Computing and Web Services (ICICWS'19), Hong Kong, 13-15 March, 2019, 査読有</p>
+          <h3><a href="http://www.iaeng.org/IMECS2019/ICICWS2019.html">IMECS2019へ</a></h3>
           <iframe src="IMECS2019_Hankenta.pdf" width="100%" height="700px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
         </div>
       </div>
