--- a/About/about.html
+++ b/About/about.html
@@ -51,7 +51,7 @@
     <!-- about -->
     <section class="contBox cf">
       <h2 class="ttl large">About</h2>
-      <p class="txtBox">中国天津市出身．<br>13歳の時，日本の長野県飯田市に来ました．独学で日本語を学び，高校受験で上京しました．<br>現在は工学院大学大学院工学研究科情報学専攻修士2年生です．<br>2017年8月から2018年2月の半年間でインターンシップにてWebサービス制作を担当していました．<br>2018年から大学内でTA(ティーチャーアシスト)を担当しています．</p>
+      <p class="txtBox">1996/1：中国天津市出身．<br>2009/7〜2011/3：日本の長野県飯田市<br>2011/4〜現在：東京都江戸川区<br>2017/8〜2018/2：インターンシップにてWebサービス制作を担当<br>2018/4〜現在：大学内でTA(ティーチャーアシスト)を担当<br>2019/6〜：画像分析のインターンを参加<br><br>趣味は旅行，書道，野球(Giants)，水泳など．<br>2018年旅行：福井 / 大阪*2 / 京都*3 / 奈良 / 鎌倉 / 成田山 / 箱根 / 阿蘇 / 高千穂 / 熊本 / 金沢<br>2019年旅行：長崎 / 香港 / 金沢 / 箱根 / 京都 / 神戸</p>
       <div class="about_main">
         <div class="left"><img src="../Main_Photo/Top/photo_02.png" alt=""></div>
         <div class="right">
@@ -61,9 +61,9 @@
             <li>所在地 ：東京都新宿区</li>
             <li>お問い合わせ ：em18011@ns.kogakuin.ac.jp</li>
             <li>使用プログラミング言語 ：<br> Python3，MySQL，HTML5・CSS3，JavaScript，Java，Ruby on Rails...</li>
+            <li>分野：観光情報検索/推薦，機械学習，自然言語処理，画像解析...</li>
 
             <h2>潘 健太　Han Kenta</h2>
-
             <li>Facebook ：<a href="https://www.facebook.com/kenta.han.9">kenta.han.9</a></li>
             <li>Instagram ：<a href="https://www.instagram.com/kenta.han_0131/?hl=ja">kenta.han_0131</a></li>
             <li>Linkedln ：<a href="https://www.linkedin.com/in/%E5%81%A5%E5%A4%AA-kenta-%E6%BD%98-han-8b6b5a146/">Kenta Han</a></li>
