--- a/About/about.html
+++ b/About/about.html
@@ -51,7 +51,7 @@
     <!-- about -->
     <section class="contBox cf">
       <h2 class="ttl large">About</h2>
-      <p class="txtBox">1996/1：中国天津市出身．<br>2009/7〜2011/3：日本の長野県飯田市<br>2011/4〜現在：東京都江戸川区<br>2017/8〜2018/2：インターンシップにてWebサービス制作を担当<br>2018/4〜現在：大学内でTA(ティーチャーアシスト)を担当<br>2019/6〜：画像分析のインターンを参加<br><br>趣味は旅行，書道，野球(Giants)，水泳など．<br>2018年旅行：福井 / 大阪*2 / 京都*3 / 奈良 / 鎌倉 / 成田山 / 箱根 / 阿蘇 / 高千穂 / 熊本 / 金沢<br>2019年旅行：長崎 / 香港 / 金沢 / 箱根 / 京都 / 神戸</p>
+      <p class="txtBox">1996/1：中国天津市出身．<br>2009/7〜2011/3：長野県飯田市<br>2011/4〜現在：東京都江戸川区<br>2017/8〜2018/2：Webサービス制作のインターンシップを参加<br>2018/4〜現在：大学内でTA（ティーチャーアシスト）を担当<br>2019/6〜：画像分析のインターンシップを参加<br><br>趣味は旅行，書道，野球（Giants），水泳など．<br>2018年旅行：福井 / 大阪*2 / 京都*3 / 奈良 / 鎌倉 / 成田山 / 箱根 / 阿蘇 / 高千穂 / 熊本 / 金沢<br>2019年旅行：長崎 / 香港 / 金沢 / 箱根 / 京都 / 神戸</p>
       <div class="about_main">
         <div class="left"><img src="../Main_Photo/Top/photo_02.png" alt=""></div>
         <div class="right">
