観光スポット間の関係を想起する情報の提示システム 公開

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
       <p style="text-align:center;">第11回データ工学と情報マネジメントに関するフォーラム(DEIM Forum 2019), H7-2, 長崎県, 2019年3月, 査読無</p>
       <h2 style="text-align:center;"><a href="./Study/study.html">An Explanation Method of Unfamiliar Tourist Spots based on Roles of User's Familiar Spots, Kenta Han, Daisuke Kitayama</a></h2>
       <p style="text-align:center;">International MultiConference of Engineers and Computer Scientists 2019(IMECS2019), IAENG International Conference on Internet Computing and Web Services (ICICWS'19), Hong Kong, 13-15 March 2019, 査読有<br><span style="font-weight:700;color:blue;">Best Student Paper Award　受賞</span></p>
+
+      <ul class="studyList">
+      <h2 style="text-align:center;">----- System -----</h2>
+        <h2 style="text-align:center;"><a href="http://133.80.186.222/klabapps/TouristSpotMap/index.html" target="new">観光スポット間の関係を想起する情報の提示システム</a></h2>
+      </ul>
       <ul class="studyList">
         <h2 style="text-align:center;">------ Figure ------</h2>
         <img src="./Main_Photo/Study/study_1.png" style="width:20%; margin:0 2% 0 20%;">
