--- a/index.html
+++ b/index.html
@@ -68,10 +68,15 @@
       <p style="text-align:center;">第11回データ工学と情報マネジメントに関するフォーラム(DEIM Forum 2019), H7-2, 長崎県, 2019年3月, 査読無</p>
       <h2 style="text-align:center;"><a href="./Study/study.html">An Explanation Method of Unfamiliar Tourist Spots based on Roles of User's Familiar Spots, Kenta Han, Daisuke Kitayama</a></h2>
       <p style="text-align:center;">International MultiConference of Engineers and Computer Scientists 2019(IMECS2019), IAENG International Conference on Internet Computing and Web Services (ICICWS'19), Hong Kong, 13-15 March 2019, 査読有<br><span style="font-weight:700;color:blue;">Best Student Paper Award　受賞</span></p>
+      <h2 style="text-align:center;"><a href="./Study/study.html">地図上における未訪問スポットの説明性向上のための観光スポットの対応関係可視化手法, 潘 健太, 北山 大輔</a></h2>
+      <p style="text-align:center;">観光情報学会 第20回研究発表会, 沖縄県, 2019年11月, 査読無</p>
+      <h2 style="text-align:center;"><a href="./Study/study.html">説明性向上のためのユーザレビューを用いた観光スポットの対応付け手法, 潘 健太, 北山 大輔</a></h2>
+      <p style="text-align:center;">情報処理学会論文誌データベース論文誌, 2020年01月掲載, 査読有</p>
 
       <ul class="studyList">
       <h2 style="text-align:center;">----- System -----</h2>
         <h2 style="text-align:center;"><a href="http://133.80.186.222/klabapps/TouristSpotMap/index.html" target="new">観光スポット間の関係を想起する情報の提示システム</a></h2>
+        <h2 style="text-align:center;"><a href="http://133.80.186.222/klabapps/SpotRelationMap/index.html" target="new">観光スポット説明向上の可視化地図（テスト）</a></h2>
       </ul>
       <ul class="studyList">
         <h2 style="text-align:center;">------ Figure ------</h2>
