--- a/About/about.html
+++ b/About/about.html
@@ -51,13 +51,13 @@
     <!-- about -->
     <section class="contBox cf">
       <h2 class="ttl large">About</h2>
-      <p class="txtBox">1996/1：中国天津市出身．<br>2009/7〜2011/3：長野県飯田市<br>2011/4〜現在：東京都江戸川区<br>2017/8〜2018/2：Webサービス制作のインターンシップを参加<br>2018/4〜現在：大学内でTA（ティーチャーアシスト）を担当<br>2019/6〜：画像分析のインターンシップを参加<br><br>趣味は旅行，書道，野球（Giants），水泳など．<br>2018年旅行：福井 / 大阪*2 / 京都*3 / 奈良 / 鎌倉 / 成田山 / 箱根 / 阿蘇 / 高千穂 / 熊本 / 金沢<br>2019年旅行：長崎 / 香港 / 金沢 / 箱根 / 京都 / 神戸</p>
+      <p class="txtBox">1996/1：中国天津市出身．<br>2009/7〜2011/3：長野県飯田市<br>2011/4〜現在：東京都江戸川区<br><br><strong>Job</strong><br>2017/8〜2018/2：Webサービス制作のインターンシップを参加<br>2018/4〜現在：大学内でTA（ティーチャーアシスト）を担当<br>2019/6〜現在：画像分析のインターンシップを参加<br><br><strong>Other</strong><br>趣味：旅行 / カメラ / 書道 / 野球（Giants）/ 水泳 ...<br>2018年旅行：福井 / 大阪×2 / 京都×3 / 奈良 / 鎌倉 / 成田山 / 箱根 / 阿蘇 / 高千穂 / 熊本 / 金沢<br>2019年旅行：長崎 / 香港 / 金沢 / 箱根 / 京都×2 / 神戸×5 / 中国(天津，南京，北京) / 仙台 / 栃木(日光，鬼怒川) / 伊豆大島 / 岡山 / 鳥取 / 島根(出雲) / 沖縄 / 北海道(札幌，小樽，余市，千歳)</p>
       <div class="about_main">
-        <div class="left"><img src="../Main_Photo/Top/photo_02.png" alt=""></div>
+        <div class="left"><img src="../Main_Photo/Top/photo_03.jpg" alt=""></div>
         <div class="right">
           <ul>
             <li>工学院大学大学院　工学研究科　情報学専攻</li>
-            <li>研究室 ：インタラクティブメディア研究室</li>
+            <li>研究室 ：<a href="http://www.ns.kogakuin.ac.jp/~wwj1019/index.html">インタラクティブメディア研究室</a></li>
             <li>所在地 ：東京都新宿区</li>
             <li>お問い合わせ ：em18011@ns.kogakuin.ac.jp</li>
             <li>使用プログラミング言語 ：<br> Python3，MySQL，HTML5・CSS3，JavaScript，Java，Ruby on Rails...</li>
