--- a/Study/study.html
+++ b/Study/study.html
@@ -61,6 +61,10 @@
           <h2>ユーザの既訪問スポットの位置付けに基づく未訪問スポットの説明手法</h2><p>潘 健太，北山 大輔<br>第11回データ工学と情報マネジメントに関するフォーラム(DEIM Forum 2019)<br>H7-2, 長崎県, 2019年3月, 査読無</p>
           <h3><a href="http://db-event.jpn.org/deim2019/">DEIM2019へ</a></h3>
           <iframe src="DEIM2019_Hankenta.pdf" width="100%" height="700px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
+          <br>
+          <h2>地図上における未訪問スポットの説明性向上のための観光スポットの対応関係可視化手法</h2><p>潘 健太，北山 大輔<br>観光情報学会 第20回研究発表会<br>沖縄県, 2019年11月, 査読無</p>
+          <h3><a href="http://www.sti-jpn.org/event/792">観光情報学会 第20回研究発表会へ</a></h3>
+          <iframe src="STI2019_Hankenta.pdf" width="100%" height="700px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
         </div>
         <div class="right">
           <h2>観光スポット検索のためのユーザのレビュー選択と特徴抽出に関する考察</h2><p>潘 健太，北山 大輔<br><a href="https://www.ieice.org/ken/index/ieice-techrep-118-107.html">電子情報通信学会技術研究報告<br> Vol.118, No.107, pp.21-24, 東京都, 2018年6月, 査読無</a></p>
@@ -69,6 +73,10 @@
           <h2>An Explanation Method of Unfamiliar Tourist Spots based on Roles of User's Familiar Spots</h2><p>Kenta Han, Daisuke Kitayama<br>International MultiConference of Engineers and Computer Scientists 2019(IMECS2019)<br> IAENG International Conference on Internet Computing and Web Services (ICICWS'19), Hong Kong, 13-15 March, 2019, 査読有</p>
           <h3><a href="http://www.iaeng.org/IMECS2019/ICICWS2019.html">IMECS2019へ</a></h3>
           <iframe src="IMECS2019_Hankenta.pdf" width="100%" height="700px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
+          <br>
+          <h2>説明性向上のためのユーザレビューを用いた観光スポットの対応付け手法</h2><p>潘 健太，北山 大輔<br>情報処理学会論文誌データベース論文誌<br>2020年01月掲載, 査読有</p>
+          <h3><a href="https://ipsj-tod.org/">情報処理学会論文誌データベースへ</a></h3>
+          <iframe src="TOD2019_Hankenta.pdf" width="100%" height="700px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
         </div>
       </div>
     </section>
