--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <h2 style="text-align:center;"><a href="./Study/study.html">地図上における未訪問スポットの説明性向上のための観光スポットの対応関係可視化手法, 潘 健太, 北山 大輔</a></h2>
       <p style="text-align:center;">観光情報学会 第20回研究発表会, 沖縄県, 2019年11月, 査読無</p>
       <h2 style="text-align:center;"><a href="./Study/study.html">説明性向上のためのユーザレビューを用いた観光スポットの対応付け手法, 潘 健太, 北山 大輔</a></h2>
-      <p style="text-align:center;">情報処理学会論文誌データベース論文誌, 2020年01月掲載, 査読有</p>
+      <p style="text-align:center;">情報処理学会論文誌 : データベース, Vol.13, No.1, pp.1-7, 2020年01月, 査読有</p>
 
       <ul class="studyList">
       <h2 style="text-align:center;">----- System -----</h2>
