--- a/Study/study.html
+++ b/Study/study.html
@@ -74,7 +74,7 @@
           <h3><a href="http://www.iaeng.org/IMECS2019/ICICWS2019.html">IMECS2019へ</a></h3>
           <iframe src="IMECS2019_Hankenta.pdf" width="100%" height="700px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
           <br>
-          <h2>説明性向上のためのユーザレビューを用いた観光スポットの対応付け手法</h2><p>潘 健太，北山 大輔<br>情報処理学会論文誌データベース論文誌<br>2020年01月掲載, 査読有</p>
+          <h2>説明性向上のためのユーザレビューを用いた観光スポットの対応付け手法</h2><p>潘 健太，北山 大輔<br><a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=202953&item_no=1&page_id=13&block_id=8">情報処情報処理学会論文誌 : データベース, Vol.13, No.1, pp.1-7,<br> 2020年01月, 査読有</a></p>
           <h3><a href="https://ipsj-tod.org/">情報処理学会論文誌データベースへ</a></h3>
           <iframe src="TOD2019_Hankenta.pdf" width="100%" height="700px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
         </div>
