--- a/Gallery/Calli_Printed/printed.html
+++ b/Gallery/Calli_Printed/printed.html
@@ -28,7 +28,7 @@
         <li class="about"><a href="../../About/about.html">About</a></li>
         <li class="study"><a href="../../Study/study.html">Study</a></li>
         <li class="gallery"><a href="../gallery.html">Gallery</a></li>
-        <li class="appdesign"><a href="../../AppDesign/appdesign.html">AppDesign</a></li>
+        <!--<li class="appdesign"><a href="../../AppDesign/appdesign.html">AppDesign</a></li>-->
       </ul>
     </nav>
     <ul class="socialBtn">
@@ -38,9 +38,9 @@
       <li>
         <a href="https://twitter.com/KentaH_1996" target="_blank"><img src="../../Main_Photo/twitter2.jpg" alt="Twitter"></a>
       </li>
-      <!-- <li>
+      <li>
         <a href="https://www.instagram.com/kenta.han_0131/" target="_blank"><img src="../../Main_Photo/instagram2.png" alt="Instagram"></a>
-      </li> -->
+      </li>
       <li class="last">
         <a href="https://www.facebook.com/kenta.han.9" target="_blank"><img src="../../Main_Photo/facebook2.png" alt="Facebook"></a>
       </li>
@@ -189,7 +189,7 @@
         <li class="about"><a href="../../About/about.html">About</a></li>
         <li class="study"><a href="../../Study/study.html">Study</a></li>
         <li class="gallery"><a href="../gallery.html">Gallery</a></li>
-        <li class="appdesign"><a href="../../AppDesign/appdesign.html">AppDesign</a></li>
+        <!--<li class="appdesign"><a href="../../AppDesign/appdesign.html">AppDesign</a></li>-->
       </ul>
     </nav>
     <p id="copyright"><small>&#169; Kenta Lab.</small></p>
