--- a/Study/study.html
+++ b/Study/study.html
@@ -27,7 +27,7 @@
         <li class="about"><a href="../About/about.html">About</a></li>
         <li class="study"><a href="study.html">Study</a></li>
         <li class="gallery"><a href="../Gallery/gallery.html">Gallery</a></li>
-        <li class="appdesign"><a href="../AppDesign/appdesign.html">AppDesign</a></li>
+        <!--<li class="appdesign"><a href="../AppDesign/appdesign.html">AppDesign</a></li>-->
       </ul>
     </nav>
 
@@ -38,9 +38,9 @@
       <li>
         <a href="https://twitter.com/KentaH_1996" target="_blank"><img src="../Main_Photo/twitter2.jpg" alt="Twitter"></a>
       </li>
-      <!-- <li>
+      <li>
         <a href="https://www.instagram.com/kenta.han_0131/" target="_blank"><img src="../Main_Photo/instagram2.png" alt="Instagram"></a>
-      </li> -->
+      </li>
       <li class="last">
         <a href="https://www.facebook.com/kenta.han.9" target="_blank"><img src="../Main_Photo/facebook2.png" alt="Facebook"></a>
       </li>
@@ -76,7 +76,7 @@
           <br>
           <h2>説明性向上のためのユーザレビューを用いた観光スポットの対応付け手法</h2><p>潘 健太，北山 大輔<br><a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=202953&item_no=1&page_id=13&block_id=8">情報処情報処理学会論文誌 : データベース, Vol.13, No.1, pp.1-7,<br> 2020年01月, 査読有</a></p>
           <h3><a href="https://ipsj-tod.org/">情報処理学会論文誌データベースへ</a></h3>
-          <iframe src="TOD2019_Hankenta.pdf" width="100%" height="700px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>
+          <!--<iframe src="TOD2019_Hankenta.pdf" width="100%" height="700px" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" style="border:none;"></iframe>-->
         </div>
       </div>
     </section>
@@ -92,7 +92,7 @@
         <li class="about"><a href="../About/about.html">About</a></li>
         <li class="study"><a href="study.html">Study</a></li>
         <li class="gallery"><a href="../Gallery/gallery.html">Gallery</a></li>
-        <li class="appdesign"><a href="../AppDesign/appdesign.html">AppDesign</a></li>
+        <!--<li class="appdesign"><a href="../AppDesign/appdesign.html">AppDesign</a></li>-->
       </ul>
     </nav>
     <p id="copyright"><small>&#169; Kenta Lab.</small></p>
